Create Fetch feature

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Weather API</title>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <script src="app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <img src="#" />
+    <script></script>
+  </body>
 </html>
-
-http://api.openweathermap.org/data/2.5/weather?q=Chicago&APPID=a4a0dc6c4302e95bac6ab763510e5bfb
