Add ability to search for desired gif

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <img src="#" />
     <button>NEW IMAGE</button>
+    <input type="text" id="gifput" name="gifput" />
   </body>
 </html>
