Convert to weather app v1

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <img src="#" />
+    <h1 id="cityTitle"></h1>
     <button>NEW IMAGE</button>
-    <input type="text" id="gifput" name="gifput" />
+    <input type="text" id="city" name="city" />
   </body>
 </html>
