--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1 id="cityTitle"></h1>
-    <button>NEW IMAGE</button>
+    <button>NEW CITY</button>
     <input type="text" id="city" name="city" />
   </body>
 </html>
