Add validation error styling

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Weather API</title>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <link rel="stylesheet" href="style.css" />
     <script src="app.js" defer></script>
   </head>
   <body>
     <h1 id="cityTitle"></h1>
     <button>NEW CITY</button>
     <input type="text" id="city" name="city" />
+    <span class="error" aria-live="polite"></span>
   </body>
 </html>
