Add function to print object to screen

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1 id="cityTitle"></h1>
+    <h3 id="temp"></h3>
+    <h3 id="feels"></h3>
     <button>NEW CITY</button>
     <input type="text" id="city" name="city" />
     <span class="error" aria-live="polite"></span>
